--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/federico-lox/amd.ts.git"
+    "url": "https://github.com/federico-lox/amd.ts.git"
   },
   "keywords": [
     "typescript",
@@ -24,9 +24,9 @@
   "author": "Federico \"Lox\" Lucignano",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/federico-lox/amd.ts/issues"
+    "url": "https://github.com/federico-lox/amd.ts/issues"
   },
-  "homepage": "https://gitlab.com/federico-lox/amd.ts#README",
+  "homepage": "https://github.com/federico-lox/amd.ts#amdts--",
   "devDependencies": {
     "typescript": "1.8.10",
     "uglify-js": "2.6.2"
